objects/Question__c.object
<CustomObject>
    <description>MD Objekt to Surveys for Survey Questions</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only active questions are selectable for sites</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Question__c</fullName>
        <description>Chinese Question for Survey</description>
        <label>CN Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_SIMPL_Question__c</fullName>
        <description>Questions for simplified Chinese</description>
        <label>CN_SIMPL_Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Overall</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DE_Question__c</fullName>
        <description>German Question for Survey</description>
        <label>DE Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EN_Question__c</fullName>
        <description>English Question for Survey</description>
        <label>EN Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ES_Question__c</fullName>
        <description>Spain Question for Survey</description>
        <label>ES Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Question__c</fullName>
        <description>French Question for Survey</description>
        <label>FR Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Question__c</fullName>
        <description>Italian Question for Survey</description>
        <label>IT Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JP_Question__c</fullName>
        <description>Japanese Question for Survey</description>
        <label>JP Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KR_Question__c</fullName>
        <description>Korean Question for Survey</description>
        <label>KR Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Question of Survey</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Question__c</fullName>
        <description>Portuguese Question for Survey</description>
        <label>PT Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Short_Name__c</fullName>
        <description>short name for the question for better display in dashboards</description>
        <label>Question Short Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0...10</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question for Survey</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_formula__c</fullName>
        <description>This field is used from Question related list</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,  EN_Question__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RU_Question__c</fullName>
        <description>Russian Federation Question for Survey</description>
        <label>RU Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sortorder__c</fullName>
        <description>Sort order for survey questions</description>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>MD Realtionship to Survey</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question_formula__c</columns>
        <columns>NAME</columns>
        <columns>Question_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Sortorder__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>